--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,17 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="css/main.css">
-{% include head.html %}
+  <meta http-equiv="refresh" content="0;url=https://www.readinglistapp.xyz" />
+  <title>Redirecting</title>
 </head>
 <body>
   <div class="container">
-    {{ content }}
+    This page has moved <a href="https://www.readinglistapp.xyz">here</a>.
   </div>
-{% include scripts.html %}
 </body>
 </html>
