--- a/books/Storyboards/LaunchScreen.storyboard
+++ b/books/Storyboards/LaunchScreen.storyboard
@@ -1,103 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HSh-6U-tny">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0LY-cm-kYd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
-        <scene sceneID="v5Y-ve-nz0">
+        <!--Finished-->
+        <scene sceneID="acj-uf-c7U">
             <objects>
-                <splitViewController modalTransitionStyle="flipHorizontal" id="HSh-6U-tny" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="gJi-e6-cq7"/>
-                    <connections>
-                        <segue destination="sdz-Sv-q05" kind="relationship" relationship="masterViewController" id="IuE-kq-Fp8"/>
-                        <segue destination="yAp-Xh-kHj" kind="relationship" relationship="detailViewController" id="chC-Ey-VV0"/>
-                    </connections>
-                </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nVX-oz-4v2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iO8-xj-qqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Q2R-ly-OR6" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IPn-bD-b8s"/>
+                        <viewControllerLayoutGuide type="bottom" id="mmr-bh-5iJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kyp-69-tce">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Finished" image="to-do" id="I1o-AO-g0L"/>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="-5785" y="-510"/>
+            <point key="canvasLocation" x="-9361" y="734"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="ytb-JM-iuf">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yi4-VF-iDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="csK-6P-SwR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BRi-LE-etB"/>
+                        <viewControllerLayoutGuide type="bottom" id="nGR-Jz-TEG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lLu-Ou-pSi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="WAS-CC-pq0"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-8540" y="801"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XoO-Ip-aK1">
+            <objects>
+                <viewController id="LXe-ie-DH1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jE9-O9-nVl"/>
+                        <viewControllerLayoutGuide type="bottom" id="0sj-Nz-LUJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qVC-HO-udH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WI7-Mm-dni" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8013" y="-444"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="aDJ-R3-2kT">
+        <scene sceneID="lBp-Xt-f3O">
             <objects>
-                <navigationController id="sdz-Sv-q05" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fhy-xu-xaX">
+                <navigationController id="qPA-dD-R10" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XhI-x6-mak">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="zkx-dg-Okd" kind="relationship" relationship="rootViewController" id="qy3-Bu-Al3"/>
+                        <segue destination="Oz1-I9-EcU" kind="relationship" relationship="rootViewController" id="XUT-qc-Q2c"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Eia-eg-0io" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TNY-qw-fEC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4967" y="-510"/>
+            <point key="canvasLocation" x="-8013" y="-1101"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="oIg-QP-V4R">
+        <scene sceneID="apq-05-ZBD">
             <objects>
-                <viewController id="yAp-Xh-kHj" sceneMemberID="viewController">
+                <viewController id="Oz1-I9-EcU" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6Zo-Vk-84S"/>
-                        <viewControllerLayoutGuide type="bottom" id="WjR-vY-pcu"/>
+                        <viewControllerLayoutGuide type="top" id="GYA-Kx-rBE"/>
+                        <viewControllerLayoutGuide type="bottom" id="D1M-Z2-jGs"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="U7b-f6-UAI">
+                    <view key="view" contentMode="scaleToFill" id="vES-8n-iNj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="LqS-B5-S9C"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YoH-WF-65j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aTH-7N-XdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-5063" y="351"/>
+            <point key="canvasLocation" x="-7298" y="-1143"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="hRk-V0-h3c">
+        <!--To Read-->
+        <scene sceneID="Qfd-k6-cFf">
             <objects>
-                <viewController id="zkx-dg-Okd" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="9Mx-9Z-txb"/>
-                        <viewControllerLayoutGuide type="bottom" id="UWM-wE-EeF"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Hiz-UY-law">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPS-WP-psj">
-                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <items>
-                                    <tabBarItem title="To Read" image="courses" selectedImage="courses-filled" id="N5l-AR-FPg"/>
-                                    <tabBarItem title="Finished" image="to-do" selectedImage="to-do-filled" id="HFZ-Yj-JRQ"/>
-                                    <tabBarItem title="Settings" image="settings" selectedImage="settings-filled" id="FJT-CD-HLn"/>
-                                </items>
-                            </tabBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="hPS-WP-psj" secondAttribute="trailing" id="BFj-Fo-VIM"/>
-                            <constraint firstItem="UWM-wE-EeF" firstAttribute="top" secondItem="hPS-WP-psj" secondAttribute="bottom" id="WFQ-e3-V5s"/>
-                            <constraint firstItem="hPS-WP-psj" firstAttribute="leading" secondItem="Hiz-UY-law" secondAttribute="leading" id="m8I-Ll-IOj"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="h80-oa-BUt"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jwh-3P-jM4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <splitViewController id="APn-zt-nhp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="To Read" image="courses" id="feU-4F-sYe"/>
+                    <connections>
+                        <segue destination="qPA-dD-R10" kind="relationship" relationship="masterViewController" id="TcH-UF-iL6"/>
+                        <segue destination="LXe-ie-DH1" kind="relationship" relationship="detailViewController" id="93L-aA-NcV"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TeC-LD-pKz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4124" y="-510"/>
+            <point key="canvasLocation" x="-8969" y="-772"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="x8y-2H-qaU">
+            <objects>
+                <tabBarController id="0LY-cm-kYd" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="d6z-Pr-xPA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="APn-zt-nhp" kind="relationship" relationship="viewControllers" id="eS0-f7-QSh"/>
+                        <segue destination="Q2R-ly-OR6" kind="relationship" relationship="viewControllers" id="NzQ-8Q-tJ4"/>
+                        <segue destination="csK-6P-SwR" kind="relationship" relationship="viewControllers" id="4fa-Am-0pa"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HYa-uZ-xZf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-9657" y="-204"/>
         </scene>
     </scenes>
     <resources>
         <image name="courses" width="25" height="25"/>
-        <image name="courses-filled" width="25" height="25"/>
         <image name="settings" width="25" height="25"/>
-        <image name="settings-filled" width="25" height="25"/>
         <image name="to-do" width="25" height="25"/>
-        <image name="to-do-filled" width="25" height="25"/>
     </resources>
 </document>
