--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -1,4 +1,5 @@
 <meta name="apple-itunes-app" content="app-id=1217139955">
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}/assets/AppIcon.ico" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
